--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "myapi",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
+    "test": "jest",
     "start": "node index",
     "dev": "nodemon index"
   },
@@ -11,14 +11,32 @@
   "license": "ISC",
   "dependencies": {
     "bluebird": "^3.5.5",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "lodash": "^4.17.14",
     "mariadb": "^2.0.5",
     "mysql": "^2.17.1",
     "mysql2": "^1.6.5",
     "node-mysql": "^0.4.2",
-    "simple-mysql": "^1.2.0"
+    "simple-mysql": "^1.2.0",
+    "sinon": "^7.3.2",
+    "underscore": "^1.9.1"
   },
   "devDependencies": {
-    "nodemon": "^1.19.1"
-  }
+    "chai": "^4.2.0",
+    "jest": "^24.8.0",
+    "mocha": "^6.1.4",
+    "nodemon": "^1.19.1",
+    "supertest": "^4.0.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/wachiya/Weather-App-Backend.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/wachiya/Weather-App-Backend/issues"
+  },
+  "homepage": "https://github.com/wachiya/Weather-App-Backend#readme",
+  "description": ""
 }
